--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-fluid principal mifondo fixed-top">
         <nav class="navbar navbar-expand-lg container mifondo ">
             <div class="container-fluid">
-                <h1 id="tituloricomida"> <img src="assets/img/viajes.svg" alt="" width="40px"> Viajes Chile</h1>
+                <h1> <img src="assets/img/viajes.svg" alt="" width="40px"> Viajes Chile</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -24,16 +24,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0 ms-auto text-reset">
                         <li class="nav-item">
-                            <a class="nav-link text-white" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link text-white" aria-current="page" href="#inicio">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Quienes somos</a>
+                            <a class="nav-link text-white" href="#quienessomos">Quienes somos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Destacado</a>
+                            <a class="nav-link text-white" href="#destacados">Destacado</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#">Contacto</a>
+                            <a class="nav-link text-white" href="#contacto">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -44,7 +44,7 @@
     <!-- FIN NAVBAR-->
 
     <!--SLIDER-->
-    <div id="carouselExample" class="carousel slide">
+    <div id="inicio" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="...">
