--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bg-black text-white">
     <!--NAVBAR-->
     <div class="container-fluid principal mifondo fixed-top">
-        <nav class="navbar navbar-expand-lg container mifondo ">
+        <nav class="navbar navbar-expand-lg container">
             <div class="container-fluid">
                 <h1> <img src="assets/img/viajes.svg" alt="" width="40px"> Viajes Chile</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -39,7 +39,6 @@
                 </div>
             </div>
         </nav>
-
     </div>
     <!-- FIN NAVBAR-->
 
