--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viajes Chile</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wdth@0,75..100;1,75..100&family=Lobster&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,7 +19,7 @@
     <div class="container-fluid principal mifondo fixed-top">
         <nav class="navbar navbar-expand-lg container">
             <div class="container-fluid">
-                <h1> <img src="assets/img/viajes.svg" alt="" width="40px"> Viajes Chile</h1>
+                <h1 id="fnav"> <img src="assets/img/viajes.svg" alt="" width="40px"> Viajes Chile</h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +47,7 @@
     <!-- FIN NAVBAR-->
 
     <!--SLIDER-->
-    <div id="inicio" class="carousel slide">
+    <div id="inicio" class="carousel slide col-12">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="...">
@@ -67,8 +71,8 @@
     <!--FIN SLIDER-->
 
     <!--QUIENES SOMOS-->
-    <section id="quienessomos">
-        <h1 class="text-uppercase text-center m-5">¿Quienes somos?</h1>
+    <section id="quienessomos" class="d-none d-sm-none d-md-block">
+        <h1 id="qsomos" class="text-uppercase text-center m-5">¿Quienes somos?</h1>
         <div class="row container mx-auto">
             <article class="col-4">
                 <div class="bg-info text-center p-1">
@@ -102,9 +106,9 @@
 
     <!--DESTACADOS-->
     <section id="destacados">
-        <h1 class="text-uppercase text-center m-5">Destacados</h1>
+        <h1 id="destaca2" class="text-uppercase text-center m-5">Destacados</h1>
         <section class="row container mx-auto">
-            <article class="col-3">
+            <article class="col-12 col-lg-3 py-3">
                 <div class="card bg-info" style="width: 18rem;">
                     <img src="assets/img/card1.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body text-white">
@@ -114,7 +118,7 @@
                     </div>
                 </div>
             </article>
-            <article class="col-3">
+            <article class="col-12 col-lg-3 py-3">
                 <div class="card bg-info" style="width: 18rem;">
                     <img src="assets/img/card2.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body text-white">
@@ -124,7 +128,7 @@
                     </div>
                 </div>
             </article>
-            <article class="col-3">
+            <article class="col-12 col-lg-3 py-3">
                 <div class="card bg-info" style="width: 18rem;">
                     <img src="assets/img/card3.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body text-white">
@@ -134,7 +138,7 @@
                     </div>
                 </div>
             </article>
-            <article class="col-3">
+            <article class="col-12 col-lg-3 py-3">
                 <div class="card bg-info" style="width: 18rem;">
                     <img src="assets/img/card4.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body text-white">
@@ -149,8 +153,8 @@
     <!--FIN DESTACADOS-->
 
     <!--FORMULARIO-->
-    <section id="contacto">
-        <h1 class="text-uppercase text-center m-5">Contacto</h1>
+    <section id="contacto" class="col-12">
+        <h1 id="contact" class="text-uppercase text-center m-5">Contacto</h1>
         <form action="" class="container">
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Nombre</label>
@@ -171,7 +175,7 @@
     </section>
     <!--FIN FORMULARIO-->
     <!--Footer-->
-    <footer class="bg-info pt-3">
+    <footer class="bg-info pt-3 col-12">
         <section class="row container mx-auto">
             <section class="col-6">
                 <p>VIAJES CHILE</p>
